--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/django,windows,linux,macos
+# docker
+.data/
+data/
